@@ -1,5 +1,16 @@
 2001-08-20  Martin Baulig  <baulig@suse.de>
 
+	* Makefile.am: Compile and install bonobo-moniker-ditem.
+
+	* bonobo-moniker-ditem.c: Make this a stand-alone server, not a shared
+	library.
+
+	* Bonobo_Moniker_ditem.server.in.in: Renamed from Bonobo_Moniker_ditem.oaf.in.
+
+	* bonobo-config-ditem.[ch]: Require dmalloc.
+
+2001-08-20  Martin Baulig  <baulig@suse.de>
+
 	* gnome-desktop-item.c (GnomeDesktopItem): Added `name', `comment'
 	and `attributes' hash tables; copy all the CORBA sequences into these
 	hash tables to make the lookup faster.
